--- a/step2/index.html
+++ b/step2/index.html
@@ -1,3 +1,4 @@
+<!-- Group Members: Vivek Govindu, Ethan Lozuke, Will Gibson, Oliver Finnamore, Seth Lamay -->
 <html>
     <body>
         <img src="king-cheetah.jpeg"/>
