--- a/step3/index.html
+++ b/step3/index.html
@@ -1,3 +1,4 @@
+<!-- Group Members: Vivek Govindu, Ethan Lozuke, Will Gibson, Oliver Finnamore, Seth Lamay -->
 <!-- Used  W3Schools for the border property: https://www.w3schools.com/cssref/pr_border.asp -->
 <html>
     <head>
