--- a/step4/index.html
+++ b/step4/index.html
@@ -1,3 +1,4 @@
+<!-- Group Members: Vivek Govindu, Ethan Lozuke, Will Gibson, Oliver Finnamore, Seth Lamay -->
 <html>
     <style>
         .blue-background {
