--- a/step5/about.html
+++ b/step5/about.html
@@ -1,3 +1,4 @@
+<!-- Group Members: Vivek Govindu, Ethan Lozuke, Will Gibson, Oliver Finnamore, Seth Lamay -->
 <html>
     <head>
         <h1>About Page</h1>
