--- a/step7/index.html
+++ b/step7/index.html
@@ -1,3 +1,5 @@
+<!-- Group Members: Vivek Govindu, Ethan Lozuke, Will Gibson, Oliver Finnamore, Seth Lamay -->
+
 <!-- Displays "Enter your name" -->
 <input id="name-input" type="text" placeholder="Enter your name" />
 <!-- Displays a button with "Click Me" on it -->
